// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ssm-parameter-backed-resource in different region 1`] = `
{
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Bucket83908E77": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "BucketParamParameucentral1ResoureB1DD6C9F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
        "Delete": "{"service":"SSM","action":"deleteParameter","parameters":{"Name":"/my-param"},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
        "InstallLatestAwsSdk": false,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:PutParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "ssm:DeleteParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`ssm-parameter-backed-resource in different region 2`] = `
{
  "Parameters": {
    "BucketNonce": {
      "Default": "123",
      "Type": "String",
    },
    "SsmParameterValuemyparamC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/my-param",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
}
`;

exports[`ssm-parameter-backed-resource in same region 1`] = `
{
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Bucket83908E77": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "BucketParamParameucentral1ResoureB1DD6C9F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
        "Delete": "{"service":"SSM","action":"deleteParameter","parameters":{"Name":"/my-param"},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
        "InstallLatestAwsSdk": false,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"eu-central-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:PutParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "ssm:DeleteParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BucketParamParameucentral1ResoureCustomResourcePolicyEAAE68EC",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BucketParamParamuseast1ResoureCustomResourcePolicyE00D6F85": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:PutParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "ssm:DeleteParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BucketParamParamuseast1ResoureCustomResourcePolicyE00D6F85",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BucketParamParamuseast1ResoureEC3872F3": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "BucketParamParamuseast1ResoureCustomResourcePolicyE00D6F85",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"us-east-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
        "Delete": "{"service":"SSM","action":"deleteParameter","parameters":{"Name":"/my-param"},"region":"us-east-1","physicalResourceId":{"id":"/my-param"}}",
        "InstallLatestAwsSdk": false,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": {
          "Fn::Join": [
            "",
            [
              "{"service":"SSM","action":"putParameter","parameters":{"Name":"/my-param","Value":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Type":"String","Overwrite":true},"region":"us-east-1","physicalResourceId":{"id":"/my-param"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`ssm-parameter-backed-resource in same region 2`] = `{}`;
